# otus_backend

./: Cargo.toml  README.md  Rocket.toml  create_db.sh  create_tables.sql  delete_tables.sql  reset_db.sh
src/: main.rs  serial.rs
src/otus_sql/: psql.rs
src/otus_sql/sql/: competitor_image.sql  create_competitor.sql  create_image.sql  create_time_slice.sql  create_vulnerability.sql  delete_image.sql  get_competitors.sql  get_images.sql  get_secret.sql  get_time_slices.sql  get_updates.sql  get_vulnerabilities.sql  image_name_to_id.sql  session_to_competitor.sql  update_score.sql
src/views/: compete.rs  create_image.rs  delete_image.rs  get_competitors.rs  get_images.rs  heartbeat.rs  home.rs  mod.rs  stats.rs  updates.rs
