[package]
name = "otus_server"
version = "0.1.0"
authors = ["Sammy Hajhamid <pepsipu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http = "0.1.18"
chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.15", features = ["with-chrono"] }
tokio-postgres = "0.3.0"
rocket_cors = "0.5.0"
reqwest = {version = "0.10.0-alpha.1", features = ["blocking"]}
rand = "0.7.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "postgres_pool"]